# peripheral-bridge

./: Cargo.toml  LICENSE  README.md  build.rs
assets/: ws_spi.json
examples/: ws.rs  ws_imu.rs  ws_spi.rs
pb/: msg.proto
src/: error.rs  lib.rs
src/pb/: mod.rs  msg.rs
src/protocol/: mod.rs
src/transport/: mod.rs  usb.rs  websocket.rs
