[package]
name = "peripheral-bridge"
version = "0.1.0"
edition = "2021"
authors = ["listentodella"]
description = "A bridge between high-level buss (USB/WebSocket) and peripheral buss (I2C/SPI)"
license = "MIT"
repository = "https://github.com/listentodella/peripheral-bridge"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.19"
async-trait = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
anyhow = "1.0.100"
prost = "0.14.1"
prost-types = "0.14.1"
prost-serde = "0.3.0"
env_logger = "0.11.8"
axum = { version = "0.8.4", features = ["ws"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }


[build-dependencies]
prost-build = "0.14.1"
