[package]
name = "peripheral-bridge"
version = "0.1.0"
edition = "2021"
authors = ["listentodella"]
description = "A bridge between high-level buss (USB/WebSocket) and peripheral buss (I2C/SPI)"
license = "MIT"
repository = "https://github.com/listentodella/peripheral-bridge"

[dependencies]
# 这里暂时不去使用 full features, 防止嵌入式侧遇到编译问题
tokio = { version = "1.47.1", features = ["net", "rt", "time", "io-std", "io-util", "macros", "rt-multi-thread"] }
tokio-tungstenite = "0.28.0"
async-trait = "0.1"
thiserror = "2.0.16"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
anyhow = "1.0.100"
prost = "0.14.1"
prost-types = "0.14.1"
prost-serde = "0.3.0"
env_logger = "0.11.8"

tokio-websockets = { version = "0.12.1", features = ["server", "fastrand", "sha1_smol"] }
futures-util = "0.3.31"
http = "1.3.1"


[build-dependencies]
prost-build = "0.14.1"
